--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Lasagna Recipe</title>
 </head>
 <body>
     <h1>The Lasagna Recipe</h1>
-
+    <a href="../index.html">Home</a>
     <h2>Lasagna Ingredients</h2>
     <ul>
         <li> Meat</li>
