add lobster_roll.html and spinach_pit.html href link

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna Recipe</a>
+    <a href="./recipes/lobster_roll.html">Lobster Roll Recipe</a>
+    <a href="./recipes/spinach_pit.html">Spinach Pie Recipe</a>
 
 </body>
 </html>
