--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -19,5 +19,14 @@
         <li>Cheese</li>
         <li>Egg</li>
     </ul>
+    <h2>How to to make Lasagna Step-by-Step</h2>
+    <ol>
+        <li>Make the sauce</li>
+        <li>Cook the noodles</li>
+        <li>Make the ricotta mixture</li>
+        <li>Layer the lasagna according to the recipe instructions</li>
+        <li>Cover with foil and bake</li>
+        <li>Let the lasagna rest before serving</li>
+    </ol>
 </body>
 </html>
