add styles.css link, add css class to h1

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    
+    <h1 class="main">Odin Recipes</h1>
     <a href="./recipes/lasagna.html">Lasagna Recipe</a>
     <a href="./recipes/lobster_roll.html">Lobster Roll Recipe</a>
     <a href="./recipes/spinach_pit.html">Spinach Pie Recipe</a>
-
+    
 </body>
 </html>
